<package format="2">
  <name>ORB_SLAM3_RB5</name>
  <version>0.0.1</version>
  <description>
     ORB_SLAM3_RB5
  </description>
  <author>Carlos Campos, Richard Elvira, Juan J. Gomez, Jose M.M. Montiel, Juan D. Tardos</author>
  <maintainer email="henryzhangzhy@gmail.com">Henry Zhang</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend> roscpp </depend>
  <depend> tf </depend>
  <depend> sensor_msgs </depend>
  <depend> image_transport </depend>
  <depend> cv_bridge </depend>

</package>



